<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/back" />

        <TextView
            android:id="@+id/foundpoliticians"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/results"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Spinner
        android:id="@+id/politicianName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        tools:listitem="@android:layout/simple_spinner_item" />

    <LinearLayout
        android:id="@+id/partyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/partylabel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/political_party_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/partytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/placeholder"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/statelabel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/state_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/placeholder_state"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/termLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/termLabel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/term_started"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/termText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/placeholder_term"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitterlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/twitterLabel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/twitter_handle_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twitterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/placeholder_twitter"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/websitelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/websitelabel"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/website_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/websiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/placeholder_website"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/savefavorite"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/save_to_favorites" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainmenu"
        android:src="@drawable/mygov_logo" />

</LinearLayout>