<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/zipcodeentry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:hint="@string/enter_zip"
        android:inputType="number"
        android:maxLength="5"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dosearchnow"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:hint="@string/search_now" />

    <Button
        android:id="@+id/retrievefavorites"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:hint="@string/view_saved_politicians" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainmenu"
        android:src="@drawable/mygov_logo" />

</LinearLayout>